# resonate-rs

./: Cargo.toml  README.md
docs/: rust-thoughts.md
docs/plans/: 2025-10-25-resonate-phase1-foundation.md  2025-10-25-resonate-phase2-audio-pipeline.md
examples/: basic_client.rs  player.rs
src/: lib.rs
src/audio/: mod.rs  pool.rs  types.rs
src/audio/decode/: mod.rs  pcm.rs
src/audio/output/: cpal_output.rs  mod.rs
src/protocol/: client.rs  messages.rs  mod.rs
src/scheduler/: audio_scheduler.rs  mod.rs
src/sync/: clock.rs  mod.rs
tests/: audio_output.rs  audio_types.rs  buffer_pool.rs  clock_sync.rs  pcm_decoder.rs  protocol_client.rs  protocol_messages.rs  scheduler.rs
