[package]
name = "resonate"
version = "0.1.0"
edition = "2021"
authors = ["Resonate Contributors"]
description = "Hyper-efficient Rust implementation of the Resonate Protocol for synchronized multi-room audio streaming"
license = "MIT OR Apache-2.0"
repository = "https://github.com/resonate-protocol/resonate-rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Utilities
log = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }

# Audio output
cpal = "0.15"

# Concurrency
crossbeam = "0.8"

# Fast mutexes
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
